crates/nx-syntax/tests/fixtures/valid/record-inheritance.nx
abstract type Entity = {
  id: int
}

abstract type UserBase extends Entity = {
  name: string
}

type User extends UserBase = {
  email: string?
}
