crates/nx-syntax/tests/fixtures/invalid/record-inheritance-multiple-bases.nx
type User extends Person, Auditable = {
  name: string
}
